--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,8 @@
     <title>Home</title>
 </head>
 <body>
+    <div th:insert="fragments/header.html"></div>
     <h1>A simple home</h1>
+    <h2>You can only access this page after signin :)</h2>
 </body>
 </html>
