--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Cadastre agora mesmo!</h1>
-    <form action="/users/signup" method="POST">
+    <form role="form" th:action="@{/signup}" th:method="post" th:object="${user}">
 
         <label for="name">Nome</label>
         <input type="text" name="name" id="name"/>
@@ -17,8 +17,8 @@
         <input type="password" name="password" id="password"/>
         <label for="bio">Biografia</label>
         <input type="text" name="bio" id="bio"/>
-
         <input type="submit" value="Cadastrar">
+
     </form>
 </body>
 </html>
