Homepage após login.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,10 +3,11 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Home</title>
 </head>
 <body>
-    <h1>Index</h1>
-    <h2>Hello, world!</h2>
+    <div th:insert="fragments/header.html"></div>
+    <h1>Home</h1>
+    <h2>Welcome to the jungle!</h2>
 </body>
 </html>
