--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="/styles/styles.css"/>
 </head>
 <body>
     <h1>Index</h1>
     <h2>Hello, world!</h2>
+    <h3>Noite!</h3>
+    <div th:insert="fragments/footer.html"></div>
 </body>
 </html>
