--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+    xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
     <link rel="stylesheet" href="/styles/styles.css"/>
 </head>
 <body>
-    <h1>Index</h1>
-    <h2>Hello, world!</h2>
-    <h3>Noite!</h3>
-    <div th:insert="fragments/footer.html"></div>
+    <h1>Essa é a homepage do sistema</h1>
+    <h2>Pode ser acessada por visitantes e usuários logados</h2>
+    <div sec:authorize="isAuthenticated()">
+        <p>Fazer uma pergunta.</p>
+    </div>
+    <div sec:authorize="isAnonymous()">
+        <p>Realizar cadastro / login</p>
+    </div>
 </body>
 </html>
