--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,3 +1,56 @@
-h1{
-    color: red;
+/*flex helpers*/
+.flex {
+    display: flex;
 }
+
+.justify-end {
+    display: flex;
+    justify-content: end;
+}
+
+.justify-flex-start {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.justify-flex-end {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.col {
+    display: flex;
+    flex-direction: column;
+}
+
+.col-12 {
+    display: flex;
+    width: 100%;
+}
+
+.col-9 {
+    display: flex;
+    width: 75%;
+}
+
+.col-6 {
+    display: flex;
+    width: 50%;
+}
+
+.col-3 {
+    display: flex;
+    width: 25%;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+}
+
+/*layout*/
+.container {
+    width: 100%;
+    height: 100vh;
+}
+
