--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{css/styles.css}">
+    <link rel="stylesheet" th:href="@{css/header.css}">
 </head>
 <body>
-    <a th:href="@{/logout}" th:text="Logout"></a>
+    <header>
+        <nav>
+            <a href="#">Inicio</a>
+            <a href="#">Por que usar a TownSq?</a>
+            <a href="#">Segurança</a>
+            <a href="#">Suporte</a>
+            <div sec:authorize="isAuthenticated()">
+                <p>Fazer uma pergunta.</p>
+            </div>
+            <button class="ask">Perguntar</button>
+        </nav>
+    </header>
 </body>
 </html>
