--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,10 +23,15 @@
             <button onclick="location.href='/signin'">Fazer uma pergunta</button>
         </div>
     </div>
-    <div class="index-content-container">
-        <div class="left-col">
-        </div>
-        <main class="cente"
+    <div class="container row">
+        <div class="col-3"></div>
+        <main class="main-content">
+            <h1>Confira as perguntas mais recentes</h1>
+            <div class="question-card">
+                <p>Um zelador precisa cobrir o horário de almoço do porteiro?</p>
+            </div>
+        </main>
+        <div class="col-3"></div>
     </div>
 </body>
 </html>
