--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -21,7 +21,7 @@
     margin-bottom: 48px;
 }
 .index-anon h1{
-    font-weight: bold;
+    font-weight: 900;
 }
 
 .index-anon-buttons{
@@ -38,4 +38,27 @@
     border-radius: 42px;
     color: #000000;
     font-weight: bold;
+}
+
+.main-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    margin-top: 48px;
+}
+
+.main-content h1{
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 64px;
+}
+
+.question-card{
+    display: flex;
+    border-radius: 10px;
+}
+
+.question-card p{
+    color: var(--dark-green)
 }
