--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,4 +1,4 @@
-root {
+:root {
     --dark-green: #8CBA3A;
     --light-green: #A9C679;
     --dark-gray: #E0E0E0;
@@ -43,6 +43,11 @@ button{
     justify-content: end;
 }
 
+.justify-center{
+    display: flex;
+    justify-content: center;
+}
+
 .justify-flex-start {
     display: flex;
     justify-content: flex-start;
@@ -82,6 +87,7 @@ button{
     display: flex;
     flex-direction: row;
 }
+
 .container {
     width: 100%;
     height: 100vh;
