Fix: correção para cor do header.
Cor do header muda de acordo com o estado da autenticação.

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -5,6 +5,14 @@ header{
     width: 100%;
 }
 
+.header-auth{
+    background-color: var(--dark-green);
+}
+
+.header-anon{
+    background-color: var(--light-green);
+}
+
 header nav {
     padding: 10px;
     display: flex;
