Feat: início do card de perguntas.
Esqueleto para o card de cada pergunta listada na página index.

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -5,11 +5,11 @@ header{
     width: 100%;
 }
 
-.header-auth{
+.header-dark{
     background-color: var(--dark-green);
 }
 
-.header-anon{
+.header-light{
     background-color: var(--light-green);
 }
 
