--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,14 +24,32 @@
         </div>
     </div>
     <div class="container row">
-        <div class="col-3"></div>
+        <aside class="col-3"></aside>
         <main class="main-content">
             <h1>Confira as perguntas mais recentes</h1>
             <div class="question-card">
-                <p>Um zelador precisa cobrir o horário de almoço do porteiro?</p>
+                <div class="card-left">
+                    <div class="question-title-status">
+                        <p>Title</p>
+                        <div class="status-pill bg-danger">
+                            <small>Não solucionada</small>
+                        </div>
+                    </div>
+                    <div class="question-text">
+                        <p>Descrição da pergunta</p>
+                    </div>
+                    <div class="question-creator">
+                        <div class="name-last-access">
+                            <p>Bruno Almeida</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="question-card-divider"></div>
+                <div class="card-right">
+                </div>
             </div>
         </main>
-        <div class="col-3"></div>
+        <aside class="col-3"></aside>
     </div>
 </body>
 </html>
