--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -15,6 +15,10 @@ h1,h2,h3,h4,h5,a,button,label,p{
     font-family: Raleway, sans-serif;
 }
 
+small{
+    font-family: Open Sans, sans-serif;
+}
+
 button{
     cursor: pointer;
 }
@@ -91,4 +95,12 @@ button{
 .container {
     width: 100%;
     height: 100vh;
+}
+
+.bg-offwhite{
+    background-color: #F4F4F4;
+}
+
+.bg-danger{
+    background-color: #D83D3D;
 }
