Feat: imagens no background; estilos.
Correções nos estilos, imagens no background de visitante. Alguns imports corrigidos.

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -25,6 +25,10 @@ header nav a {
     color: white;
 }
 
+header nav img{
+    margin-top: 8px;
+}
+
 .ask{
     margin-left: 50px;
     padding: 10px 25px;
