--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Usuário</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
     <div th:insert="fragments/header.html"></div>
