--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,16 +31,16 @@
             <div class="question-card">
                 <div class="card-left">
                     <div class="question-title-status">
-                        <p>Title</p>
+                        <a href="/question">Título da pergunta</a>
                         <div class="status-pill bg-danger">
                             <small>Não solucionada</small>
                         </div>
                     </div>
                     <div class="question-text">
-                        <p>Descrição da pergunta</p>
+                        <p>No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença constante do zelador durante o horário de almoço da portaria. O zelador que está trabal...</p>
                     </div>
                     <div class="question-creator">
-                        <img src="/img/user"/>
+                        <img src="img/user.svg"/>
                         <div class="name-last-access">
                             <p>Bruno Almeida</p>
                             <small>2 horas</small>
@@ -49,6 +49,61 @@
                 </div>
                 <div class="question-card-divider"></div>
                 <div class="card-right">
+                    <p>0</p>
+                    <p>respostas</p>
+                    <small>0 comentários</small>
+                </div>
+            </div>
+            <div class="question-card">
+                <div class="card-left">
+                    <div class="question-title-status">
+                        <a href="/question">Título da pergunta</a>
+                        <div class="status-pill bg-danger">
+                            <small>Não solucionada</small>
+                        </div>
+                    </div>
+                    <div class="question-text">
+                        <p>No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença constante do zelador durante o horário de almoço da portaria. O zelador que está trabal...</p>
+                    </div>
+                    <div class="question-creator">
+                        <img src="img/user.svg"/>
+                        <div class="name-last-access">
+                            <p>Bruno Almeida</p>
+                            <small>2 horas</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="question-card-divider"></div>
+                <div class="card-right">
+                    <p>0</p>
+                    <p>respostas</p>
+                    <small>0 comentários</small>
+                </div>
+            </div>
+            <div class="question-card">
+                <div class="card-left">
+                    <div class="question-title-status">
+                        <a href="/question">Título da pergunta</a>
+                        <div class="status-pill bg-danger">
+                            <small>Não solucionada</small>
+                        </div>
+                    </div>
+                    <div class="question-text">
+                        <p>No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença constante do zelador durante o horário de almoço da portaria. O zelador que está trabal...</p>
+                    </div>
+                    <div class="question-creator">
+                        <img src="img/user.svg"/>
+                        <div class="name-last-access">
+                            <p>Bruno Almeida</p>
+                            <small>2 horas</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="question-card-divider"></div>
+                <div class="card-right">
+                    <p>0</p>
+                    <p>respostas</p>
+                    <small>0 comentários</small>
                 </div>
             </div>
         </main>
