--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -60,8 +60,9 @@
     display: flex;
     border-radius: 10px;
     flex-direction: row;
-    width: 85%;
+    width: 90%;
     box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.25);
+    margin-bottom: 2em;
 }
 
 .question-card p{
@@ -69,7 +70,6 @@
 }
 
 .card-left{
-    width: 80%;
     display: flex;
     flex-direction: column;
 }
@@ -78,7 +78,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20%;
+    justify-content: center;
+    font-family: Open Sans, sans-serif;
+}
+
+.card-right p{
+    font-family: Open Sans, sans-serif;
+    margin: 0;
+    color: var(--darker-green);
+}
+
+.card-right p:first-child{
+    font-size: 2em;
+}
+
+.card-right small{
+    font-family: Open Sans, sans-serif;
+    margin: 0;
+    color: var(--darker-gray);
+    text-align: justify;
 }
 
 .question-title-status{
@@ -88,18 +106,21 @@
     margin-bottom: 16px;
 }
 
-.question-title-status p{
+.question-title-status a{
     color: var(--darker-green);
+    text-decoration: none;
+    font-size: 1.2em;
 }
 
 .question-creator{
     display: flex;
-    width: 100%;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .question-creator img{
-    width: 32px;
-    height: 32px;
+
 }
 
 .question-creator p{
@@ -113,31 +134,38 @@
 
 .question-text p{
     color: #000000;
+    text-align: justify;
 }
 
 .name-last-access{
     display: flex;
-    width: 100%;
-    height: 100%;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
+    margin-left: 4px;
+}
+
+.name-last-access p{
+    color: #000000;
+}
+
+.name-last-access small{
+    color: var(--darker-gray);
 }
 
 .question-card-divider{
     display: flex;
     flex-direction: column;
     align-self: center;
-    height: 75%;
+    height: 80%;
     border-left:1px solid #BEBEBE;
     border-right:1px solid #BEBEBE;
-    margin-left: 16px;
+    margin: 0 8px 0 8px;
 }
 
 .status-pill{
     border-radius: 500px;
     display: flex;
-    height: 1.5rem;
-    width: 22%;
+    padding: 10px;
     align-items: center;
     justify-content: center;
 }
@@ -146,6 +174,22 @@
     font-weight: bolder;
 }
 
-.anuncio{
-    background-color: #636262;
+@media (max-width: 1600px) {
+    .index-anon{
+        background: url("/img/question.svg") bottom left no-repeat, url("/img/city.svg") bottom right no-repeat, var(--light-green);
+        background-size: 28em;
+    }
+}
+
+@media (max-width: 1400px) {
+    .index-anon{
+        background: url("/img/question.svg") bottom left no-repeat, url("/img/city.svg") bottom right no-repeat, var(--light-green);
+        background-size: 24em;
+    }
+}
+
+@media (max-width: 1200px) {
+    .index-anon{
+        background: var(--light-green);
+    }
 }
