Feature: Eduardo Lessa Funcionalidade de logout na aplicação, proteção nas rotas de login/signup para caso o usuário já esteja logado.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,10 +14,10 @@
             <a href="#">Por que usar a TownSq?</a>
             <a href="#">Segurança</a>
             <a href="#">Suporte</a>
-            <div sec:authorize="isAuthenticated()">
-                <p>Fazer uma pergunta.</p>
-            </div>
             <button class="ask">Perguntar</button>
+            <div sec:authorize="isAuthenticated()">
+                <a href="/logout">Logout</a>
+            </div>
         </nav>
     </header>
 </body>
