--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -40,13 +40,15 @@
                             <div class="row">
                                 <div class="col-4">
                                     <div style="width: 120px; height: 120px">
-                                        <div class="avatar"></div>
+                                        <div class="avatar justify-center align-center">
+                                            <img width="64px" src="/img/newpicture.svg" alt="Adicionar nova foto">
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col align-center">
                                     <div class="form-control">
                                         <div class="form-control">
-                                            <label for="name" style="font-size: 10pt">Email</label>
+                                            <label for="name" style="font-size: 10pt">Nome</label>
                                             <input type="text" name="name" id="name"/>
                                         </div>
                                     </div>
@@ -60,21 +62,21 @@
 
                                     <div class="form-control">
                                         <div class="form-control">
-                                            <label for="bio" style="font-size: 10pt">Email</label>
-                                            <input type="text" name="name" id="bio"/>
+                                            <label for="bio" style="font-size: 10pt">Bio</label>
+                                            <textarea type="text" name="name" id="bio"></textarea>
                                         </div>
                                     </div>
 
                                     <div class="form-control">
                                         <div class="form-control">
-                                            <label for="currentPassword" style="font-size: 10pt">Email</label>
+                                            <label for="currentPassword" style="font-size: 10pt">Senha atual</label>
                                             <input type="text" name="name" id="currentPassword"/>
                                         </div>
                                     </div>
 
                                     <div class="form-control">
                                         <div class="form-control">
-                                            <label for="newPassword" style="font-size: 10pt">Email</label>
+                                            <label for="newPassword" style="font-size: 10pt">Nova senha</label>
                                             <input type="text" name="name" id="newPassword"/>
                                         </div>
                                     </div>
