feature: @vinicius - Continua a implementaçao do layout da tela de editar perfil do usuario

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -246,6 +246,10 @@ button{
     flex-direction: row;
 }
 
+.link:hover {
+    cursor: pointer;
+}
+
 .container {
     width: 80%;
     height: 100vh;
