--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -10,24 +10,24 @@
 <body>
     <div th:insert="fragments/header.html"></div>
     <div class="container">
-        <div class="row" style="width: 100%; height: 100%">
+        <div class="row">
             <div class="col-4">
                 <div class="row-4">
                     <div class="col-4 align-center">
-                        <div style="width: 96px; height: 96px">
+                        <div style="width: 7vw; height: 7vw">
                             <div class="avatar"></div>
                         </div>
                     </div>
                     <div class="col">
-                        <h2 class="title" th:text="${user.getName()}"></h2>
-                        <h4 class="subtitle" th:text="${user.getName()}"></h4>
-                        <h4 class="subtitle" th:text="${user.getName()}"></h4>
+                        <h2 class="title" th:text="${user.getName()}">Teste</h2>
+                        <small class="subtitle"><b>Pontuação: </b><span th:text="${user.getName()}"></span></small>
+                        <small class="subtitle"><b>Membro desde: </b><span th:text="${user.getName()}"></span></small>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <h2 class="title">Biografia</h2>
-                        <p style="text-align: start; color: black; font-size: 10pt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <small>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</small>
                     </div>
                 </div>
             </div>
@@ -39,9 +39,9 @@
                         <div class="col-9">
                             <div class="row">
                                 <div class="col-4">
-                                    <div style="width: 120px; height: 120px">
-                                        <div class="avatar justify-center align-center">
-                                            <img width="64px" src="/img/newpicture.svg" alt="Adicionar nova foto">
+                                    <div style="width: 9vw; height: 9vw">
+                                        <div class="avatar justify-center align-center link">
+                                            <img width="40%" src="/img/newpicture.svg" alt="Adicionar nova foto">
                                         </div>
                                     </div>
                                 </div>
